# agentic

./: .gitignore  README.md  SETUP-PC.md  SETUP-mac.md  environment.yml  pyproject.toml  requirements.txt  troubleshooting.ipynb
intro/: lab1.ipynb  lab2.ipynb  lab3.ipynb
loop/: lab1.ipynb
outputs/: agent1 (1).ipynb  agent3 (1).ipynb  agent4 (1).ipynb  agent5 (1).ipynb  lab1_output.ipynb  lab2_output.ipynb  new_agent5_output.ipynb
setup/: SETUP-new.md
workshop/: agent1.ipynb  agent2.ipynb  agent3.ipynb  agent4.ipynb  agent5.ipynb  deal_agent_framework.py  memory.json  old_agent5.ipynb  price_is_right.py  pricer_service.py
workshop/agents/: autonomous_planning_agent.py  frontier_agent.py  messaging_agent.py  planning_agent.py  scanner_agent.py
workshop/price_agents/: autonomous_planning_agent.py  deals.py  frontier_agent.py  messaging_agent.py  scanner_agent.py
workshop/sandbox/: deals.md
