[project]
name = "agentic"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "chromadb>=1.2.0",
    "datasets>=4.2.0",
    "feedparser>=6.0.12",
    "gensim>=4.4.0",
    "gradio>=5.49.1",
    "ipykernel>=7.0.1",
    "ipywidgets>=8.1.7",
    "jupyter-dash>=0.4.2",
    "jupyterlab>=4.4.9",
    "litellm>=1.78.3",
    "matplotlib>=3.10.7",
    "modal>=1.2.0",
    "numpy>=2.3.4",
    "openai>=2.5.0",
    "openai-agents>=0.4.0",
    "pandas>=2.3.3",
    "plotly>=6.3.1",
    "psutil>=7.1.0",
    "pydantic>=2.11.10",
    "python-dotenv>=1.1.1",
    "requests>=2.32.5",
    "rich>=14.2.0",
    "sentence-transformers>=5.1.1",
    "sentencepiece>=0.2.1",
    "setuptools>=80.9.0",
    "speedtest-cli>=2.1.3",
    "torch>=2.9.0",
    "tqdm>=4.67.1",
    "transformers>=4.57.1",
]
